web/static/css/marketing.scss
@import "modules/colors";

$base-font-color: #191919;
$base-font-family: "Tiempos Text", Georgia, serif;
$base-font-size: 15px;
$base-line-height: 1.6;
$action-color: $muted-lilac;
$base-border-color: $solitude;
$input-border: 1px solid $gray-lighter;
$wrapper-width: 35.375rem;

$footer-line-height: 1.25rem;
$footer-font-size: 0.8125rem;
$footer-vertical-padding: 1.375rem;
$footer-height: (2 * $footer-vertical-padding) + $footer-line-height;

@import "modules/tiempos-text";
@import "modules/variables";
@import "partials/base";

.page-wrap {
  background-color: $white;
  background-image: url("/images/marketing/header-background.svg");
  background-position: top center;
  background-repeat: no-repeat;
  box-shadow: 0 5px 4px -4px transparentize($black, 0.68);
  padding: 0 0.625rem 5rem;

  @media($screen-sm-min) {
    margin-bottom: $footer-height;
    padding-bottom: 10rem;
    position: relative;
    z-index: 2;
  }
}

main {
  > section {
    margin-left: auto;
    margin-right: auto;
    max-width: $wrapper-width;
  }
}

h4 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

li {
  margin-bottom: 1rem;
}

.header-quote {
  color: $gray-darkest;
  font-size: 1.5626rem;
  line-height: 1.44;
  margin: 3rem auto 1em;
  max-width: 38rem;
  text-align: center;

  &::after {
    border-bottom: 2px solid lighten($gray-lighter, 7%);
    content: "";
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
    width: 1.8rem;
  }

  svg {
    display: block;
    margin: 1rem auto;
  }
}

.site-header {
  padding-top: 1.25rem;
  text-align: right;

  @media($screen-sm-min) {
    padding: 1.25rem;
  }
}

.button-style__a {
  background-color: $white;
  border: 1px solid $gray-light;
  border-radius: 2rem;
  box-shadow: 0 1px 4px 0 lighten($gray-lighter, 4%);
  display: inline-block;
  font-size: 0.875rem;
  font-weight: bold;
  padding: 0.5rem 2rem calc(0.5rem + 1px);
  text-decoration: none;
}

.site-footer {
  $extra-gradient-start: $midnight-blue;
  $extra-gradient-end: $deep-lilac;
  background-image: linear-gradient(to right, $extra-gradient-start 5%, $extra-gradient-end);
  color: $white;
  font-size: $footer-font-size;
  line-height: $footer-line-height;
  padding: $footer-vertical-padding;

  @media($screen-sm-min) {
    bottom: 0;
    position: fixed;
    width: 100%;
    z-index: 1;

    .container {
      align-items: center;
      display: flex;
    }

    &__copyright {
      flex: 1;
    }
  }

  :any-link {
    color: $white;
  }

  &__links {
    a {
      margin-left: 2.2rem;
    }
  }
}

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 68rem;
}

.speech-bubbles {
  @include clearfix;

  margin: 3.125rem auto;
  max-width: 18rem;

  &__p {
    border-radius: 0.8rem;
    font-family: $system-font-stack;
    font-size: 0.875rem;
    line-height: 1.5rem;
    margin: 0.3125rem 0;
    padding: 0.5em 1em;
    position: relative;

    &::before {
      bottom: 0;
      content: "";
      height: 20px;
      position: absolute;
      // z-index: -1;
    }

    &::after {
      background: $white;
      bottom: 0;
      content: "";
      height: 20px;
      position: absolute;
      width: 26px;
      z-index: 1;
    }
  }

  &__p_from-us {
    $bg-color: lighten($gray-lighter, 7%);
    background-color: $bg-color;
    float: right;

    &::before {
      border-bottom-left-radius: 16px 14px;
      border-right: 20px solid $bg-color;
      right: -7px;
    }

    &::after {
      border-bottom-left-radius: 10px;
      right: -26px;
    }
  }

  &__p_from-them {
    background-image: $extra-gradient;
    color: $white;
    float: left;

    &::before {
      border-bottom-right-radius: 16px 14px;
      border-left: 20px solid $extra-gradient-start;
      left: -7px;
    }

    &::after {
      border-bottom-right-radius: 10px;
      left: -26px;
    }
  }

  em {
    color: $action-color;
    font-style: normal;
    font-weight: bold;
  }
}

.fancy-list {
  $left-indent: 1.75rem;

  list-style-type: none;
  padding-left: $left-indent;

  li {
    position: relative;

    &::before {
      background-position: center;
      background-repeat: no-repeat;
      content: "";
      display: block;
      left: -$left-indent;
      position: absolute;
    }
  }

  &_star {
    li {
      &::before {
        background-image: url("/images/star.svg");
        height: 1.6rem;
        width: 0.75rem;
      }
    }
  }

  &_checkmark {
    li {
      &::before {
        background-image: url("/images/checkmark.svg");
        height: 1.6em;
        width: 1.6em;
      }
    }
  }
}

.beta-signup {
  margin-top: 2rem;

  &_label {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }

  &_form-fields {
    position: relative;
  }

  [type=email] {
    border-radius: $base-spacing;
    font-size: 14px;
    padding: 0.75em 1.4rem calc(0.75em + 2px);
  }

  &_button {
    border-color: $gray-light;
    border-radius: $base-spacing;
    box-shadow: 0 1px 4px 0 lighten($gray-lighter, 4%);
    font-size: 14px;
    font-weight: bold;
    margin-top: 0.5rem;
    padding: 0.75em 2rem calc(0.75em + 2px);
    text-decoration: none;
    width: 100%;

    @media($screen-sm-min) {
      bottom: 0;
      margin-top: 0;
      position: absolute;
      right: 0;
      width: auto;
    }
  }
}

.impressions-graph {
  display: flex;
  flex-direction: column;
  font-family: $system-font-stack;
  font-size: 0.75rem;
  min-height: 16rem;

  @media($screen-sm-min) {
    flex: 1;
    margin-left: 3.125rem;
    padding-bottom: 1rem;
  }

  &__caption {
    font-weight: bold;
    line-height: 1.5rem;
    margin-bottom: 0.625rem;
    margin-top: 1rem;
  }

  &__container {
    border: $base-border;
    border-radius: 0.5rem;
    display: flex;
    flex: 1;
    padding: 1.125rem;
  }

  &__column {
    display: flex;
    flex: 1;
    flex-direction: column;
    font-size: 0.8125rem;
    text-align: center;
  }

  &__label {
    color: $gray-light;
    margin-top: 0.5rem;
    order: 2;
  }

  &__value {
    align-items: flex-end;
    color: $white;
    display: flex;
    flex: 1;
    margin: 0 auto;
    vertical-align: bottom;
    width: 3.25rem;
  }

  &__bar {
    background-image: linear-gradient(to bottom, $extra-gradient-start, $extra-gradient-end);
    border-radius: 0.25rem;
    flex: 1;
    height: 100%;
    padding-top: 0.5rem;
  }

  p {
    margin: 1.25rem inherit;
  }
}

@media($screen-sm-min) {
  .reposting-stats {
    display: flex;

    &__content {
      width: 18rem;

      h4 {
        margin-right: 1rem;
      }
    }
  }
}

hr {
  border: none;
  border-top: 1px solid $base-border-color;
  margin: 2.5rem auto;
  max-width: $wrapper-width;

  + .two-columns {
    margin-top: -1rem;
  }
}

.early-access-screenshots {
  text-align: center;

  figure {
    margin: 2rem auto;
    max-width: 11.625rem;
  }

  p {
    order: 100;
  }

  @media($screen-sm-min) {
    display: flex;
    flex-wrap: wrap;

    figure {
      margin: 0 0 0 2%;
      width: 32%;

      &:first-of-type {
        margin-left: 0;
      }
    }
  }
}

.p__muted {
  color: lighten($gray, 8%);
  font: 0.8125rem $system-font-stack;
}

.small-caps {
  font-feature-settings: "c2sc", "smcp";
  letter-spacing: 0.05em;
}

